--- a/frontend/src/stylesheets/variables.css
+++ b/frontend/src/stylesheets/variables.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
+
 :root {
     --primary: #0F2E53;
     --secondary: #EDEDED;
@@ -8,6 +10,7 @@
 /*Fonts*/
     --accent: "Nunito Sans", Arial, sans-serif;
     --regular: "Roboto", Arial, sans-serif;
+    --SideBar: "Titillium Web", sans-serif;
 
 /*Sizes*/
     --max-width: 720px;
