--- a/frontend/src/stylesheets/variables.css
+++ b/frontend/src/stylesheets/variables.css
@@ -11,6 +11,7 @@
     --accent: "Nunito Sans", Arial, sans-serif;
     --regular: "Roboto", Arial, sans-serif;
     --SideBar: "Titillium Web", sans-serif;
+    --title: "Helvetica", sans-serif;
 
 /*Sizes*/
     --max-width: 720px;
