--- a/frontend/src/stylesheets/Login.module.css
+++ b/frontend/src/stylesheets/Login.module.css
@@ -1,5 +1,73 @@
-.wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+@import "variables.css";
+
+.title{
+    color: #313131;
+    font-size: 3rem;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 2rem;
+    font-family: var(--title);
+}
+
+.form {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 8rem;
+    max-width: 400px;
+    padding: 1.25rem;
+
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.151);
+}
+
+.formGroup {
+    word-wrap: break-word;
+    box-sizing: border-box;
+    margin-bottom: 1rem;
+}
+
+label {
+    display: block;
+}
+
+input {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    border: 1px solid #ced4da;
+    border-radius: 4px;
+    background-color: #fff;
+    background-clip: padding-box;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    box-sizing: border-box;
+}
+
+.errMessage {
+    color: var(--error);
+}
+
+.offscreen {
+    overflow: hidden;
+}
+
+.loginButton {
+    background-color: #52b0e2;
+    border-radius: 5px;
+    width: 100%;
+    height: 2.5rem;
+    border: none;
+
+    font-family: var(--regular);
+    color: white;
+    font-size: 1rem;
+}
+
+button:hover {
+    background-color: #329dd5;
+    transition: all 0.2s ease;
 }
