--- a/frontend/src/stylesheets/Layout.module.css
+++ b/frontend/src/stylesheets/Layout.module.css
@@ -128,7 +128,7 @@ nav ul,nav li {
 }
 
 .selectedNote {
-    background-color: #000000;
+    background-color: #000000 !important;
 }
 
 .settings {
