--- a/frontend/src/stylesheets/Layout.module.css
+++ b/frontend/src/stylesheets/Layout.module.css
@@ -4,11 +4,53 @@
 .header {
     display: flex;
     position: fixed;
-    background-color: rgb(216, 216, 216);
-    width: 100%;
+    left: 0%;
+    top: 0%;
+    right: 0%;
+    bottom: auto;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    background-color: rgb(233, 233, 233);
     justify-content: space-between;
     z-index: 2;
+    align-items: center;
+    box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 1px 14px 0px rgba(0, 0, 0, 0.12);
+    
 }
+
+.header h1 {
+    font-size: 2rem;
+    text-align: center;
+    font-family: var(--title);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.header button {
+    display: flex;
+    padding: 0.4rem 1.5rem;
+    justify-content: center;
+    align-items: center;
+    grid-column-gap: 0.625rem;
+    border: 3px solid #000;
+    border-radius: 3rem;
+    background-color: #000;
+    transition: all 100ms ease-in-out;
+    font-family: 'TT Commons Pro', sans-serif;
+    color: #fff;
+    font-size: 0.9rem;
+    font-weight: 700;
+    text-align: center;
+    width: 8rem;
+    height: 2.5rem;
+}
+
+.header button:hover {
+    background-color: #e03327;
+    box-shadow: -1px 1px 0 0 #000;
+    transform: translate(1px, -1px);
+    outline: 0;
+  }
 
 .sideNav {
     overflow:visible;
@@ -144,10 +186,4 @@ nav ul,nav li {
     padding: 10rem 0 1rem 1rem;
     margin-left: auto;
     margin-right: auto;
-}
-
-[contenteditable=true]:empty:before {
-    content: attr(placeholder);
-    display: block;
-    color: #aaa;
 }
