--- a/frontend/src/stylesheets/Layout.module.css
+++ b/frontend/src/stylesheets/Layout.module.css
@@ -1,6 +1,7 @@
 @import "variables.css";
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 
+/* Header */
 .header {
     display: flex;
     position: fixed;
@@ -15,7 +16,6 @@
     z-index: 2;
     align-items: center;
     box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 1px 14px 0px rgba(0, 0, 0, 0.12);
-    
 }
 
 .header h1 {
@@ -50,13 +50,14 @@
     box-shadow: -1px 1px 0 0 #000;
     transform: translate(1px, -1px);
     outline: 0;
-  }
+}
+
+/* Side navigation */
 
 .sideNav {
-    overflow:visible;
     background:#212121;
     border-right:1px solid #e5e5e5;
-    position:absolute;
+    position: fixed;
     top:0;
     bottom:0;
     left:0;
@@ -66,17 +67,35 @@
 }
 
 .sideNav ul {
-    margin-top:100px;
+    padding-top: 75px;
+    max-height: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 }
 
-.sideNav li {
-    position:relative;
-    display:block;
-    width:250px;
+.sideNav div {
+    z-index: 1;
+    overflow: hidden auto;
+    box-sizing: border-box;
+}
+
+.sideNav div::-webkit-scrollbar {
+    width: 6px;
+}
+  
+.sideNav div::-webkit-scrollbar-track {
+    background: #000000;
+}
+
+.sideNav div::-webkit-scrollbar-thumb {
+    background-color: rgb(207, 207, 207);
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0);
 }
 
 .sideNav a {
-    position:relative;
     display:table;
     border-collapse:collapse;
     border-spacing:0;
@@ -89,7 +108,6 @@
 }
 
 .sideNav i {
-    position:relative;
     display:table-cell;
     width:60px;
     height:36px;
@@ -99,17 +117,12 @@
 }
     
 .navText {
-    position:relative;
     display:table-cell;
     vertical-align:middle;
     width:190px;
     font-size: 1.2em;
     font-family: var(--SideBar);
 }
-   
-a:hover,a:focus {
-    text-decoration:none;
-} 
     
 nav ul,nav li {
     outline:0;
@@ -118,8 +131,15 @@ nav ul,nav li {
 }
 
 .sideNav li:hover {
-    color:#fff;
     background-color:#181818;
+}
+
+.pagesText {
+    background-color: #2c2c2c;
+    font-family: arial;
+    font-size: 15px;
+    color:#9c9c9c;;
+    padding: 4px 5px;
 }
 
 .notePage {
@@ -158,8 +178,19 @@ nav ul,nav li {
     overflow: hidden;
 }
 
-.noteIcon {
-    float: right;
+.innerAddPage{
+    display: flex;
+    height: 30px;
+    font-size: 1.5rem;
+    font-family: var(--SideBar);
+    align-items: center;
+    padding-left: 10px;
+
+}
+
+.innerAddPage i{
+    height: 5px;
+    font-size: 12px;
 }
 
 .noteIcon i {
@@ -173,11 +204,16 @@ nav ul,nav li {
     background-color: #000000 !important;
 }
 
-.settings {
-    position:absolute;
-    left:0;
-    bottom:0;
+.addPage {
+    display: block !important;
+    margin-top: auto !important;
 }
+
+.addPage:hover {
+    background-color:#181818;
+}
+
+/* content */
 
 .content {
     box-sizing: border-box;
