--- a/frontend/src/stylesheets/Layout.module.css
+++ b/frontend/src/stylesheets/Layout.module.css
@@ -211,9 +211,9 @@ nav ul,nav li {
 
 .content {
     box-sizing: border-box;
-    width: 80%;
-    max-width: 820px;
-    padding: 10rem 0 1rem 1rem;
+    width: 100%;
+    max-width: 1020px;
+    padding: 10rem 0 1rem 280px;
     margin-left: auto;
     margin-right: auto;
 }
