--- a/frontend/src/stylesheets/Block.module.css
+++ b/frontend/src/stylesheets/Block.module.css
@@ -50,7 +50,7 @@
 }
 
 .draggable:hover .block {
-    background: #fafafa;
+    background: #f8f8f8;
     outline-color: var(tertiary);
 }
 .draggable:hover .dragHandle {
@@ -95,4 +95,20 @@
     color: #888888;
     font-size: 0.875rem;
     letter-spacing: 0.5px;
+}
+
+.addButton {
+    width: 100%;
+    height: 22px;
+    background: #f8f8f8;
+    border: none;
+    color: #b9b9b9;
+    font-size: 1rem;
+    border-radius: 4px;
+    opacity: 0;
+}
+
+.addButton:hover {
+    cursor: pointer;
+    opacity: 1;
 }
