Fixed title bug, added more routing pages and admin checks

--- a/frontend/src/stylesheets/Layout.module.css
+++ b/frontend/src/stylesheets/Layout.module.css
@@ -26,6 +26,13 @@
     margin-bottom: 1rem;
 }
 
+.header h4{
+    align-self: flex-end;
+    margin-left: 10px;
+    margin-right: auto;
+    margin-bottom: 1.2rem;
+}
+
 .header button {
     border: 3px solid #000;
     border-radius: 3rem;
