--- a/frontend/src/stylesheets/actionMenu.module.css
+++ b/frontend/src/stylesheets/actionMenu.module.css
@@ -2,8 +2,8 @@
 
 .menuWrapper {
     position: absolute;
-    width: 6.875rem;
-    height: 9rem;
+    width: 8rem;
+    height: 17rem;
     z-index: 11;
     display: flex;
     flex-direction: column;
@@ -11,7 +11,8 @@
   
 .menu {
     background: white;
-    border-radius: 4px;
+    border-radius: 0.5rem;
+    overflow: scroll;
     box-shadow: rgba(100, 100, 111, 0.322) 0px 7px 29px 0px;
 }
   
@@ -29,23 +30,10 @@
   
 .item:hover,
 .item:focus {
-    background-color: rgb(228, 228, 228);
+    background: rgb(228, 228, 228);
     cursor: pointer;
 }
   
-.item:first-of-type:hover,
-.item:first-of-type:focus {
-    border-top-right-radius: 0.5rem;
-    border-top-left-radius: 0.5rem;
-}
-  
-.item:last-of-type:hover,
-.item:last-of-type:focus {
-    border-bottom-right-radius: 0.5rem;
-    border-bottom-left-radius: 0.5rem;
-}
-  
 .selectedTag {
-    background: rgb(224, 224, 224);
-    border-radius: .5rem;
+    background: rgb(228, 228, 228);
 }
