fixed action menu scroll

--- a/frontend/src/stylesheets/actionMenu.module.css
+++ b/frontend/src/stylesheets/actionMenu.module.css
@@ -12,7 +12,7 @@
 .menu {
     background: white;
     border-radius: 0.5rem;
-    overflow: scroll;
+    overflow: auto;
     box-shadow: rgba(100, 100, 111, 0.322) 0px 7px 29px 0px;
 }
   
