--- a/frontend/src/stylesheets/site.css
+++ b/frontend/src/stylesheets/site.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 
 :root {
     --primary: #0F2E53;
@@ -23,4 +24,14 @@
 html {
     scroll-padding-top: 80px;
     scroll-padding-bottom: 4px;
+    background-color: #e5e5ee;
+}
+
+body {
+    height: 100vh;
+    overflow: hidden;
+}
+
+#root {
+    height: 100%;
 }
